[package]
name = "vmath"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
builtin = { workspace = true, optional = true }
builtin_macros = { workspace = true, optional = true }
vstd = { workspace = true, optional = true }
paste = "1.0"

[lints]
workspace = true

[features]
default = []
noverify = []
verus = ["builtin", "builtin_macros", "vstd"]
